2009-08-15  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_re/Makefile.am: added 'if_rlreg.h' to SOURCES so
	that it is 'distributed'.

2009-08-15  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_em/31000_osdep.h: added missing 'void' return
	type of __out_le32() inline function.

2009-08-06  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/rtems_callout.c: fixed possible race
	condition. callout_stop() must check again from
	critical/protected section of code if callout is still on
	the list/active. Otherwise, the callout-task could
	have executed and removed the callout between
	callout_stop() checking the p_prev pointer and
	entering the critical section.

2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_em/Makefile.am, if_em/e1000_osdep.h, if_em/if_em.c:
	Changed 'e1000_osdep.h' to provide stdalone I/O methods for
	select architectures (x86 and PPC -- others fall back on
	libbsdport/bus.h). This lets the low-level driver (everything
	except for 'if_em.c/if_em.h') API be independent of
	BSD networking and libbsdport which is desirable since
	certain applications may wish to just use the low-level
	API for implementing dedicated 'raw-ethernet' drivers
	for BSD-independent, proprietary GigE communication.

2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/alldrv.c: reactivate weak aliases for all
	known/supported drivers. This magic allows the user to
	just link the desired (sub-)set of drivers.

2009-08-05  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport.h: define _KERNEL only if not defined already
	(e.g., from Makefile).

2009-06-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libbsdport/alldrv.c, libbsdport/libbsdport_api.h: Add include
	<stdio.h> for FILE *.

	2009/05/12 (TS)
	- bugfix: bus_write_2() must map to bus_space_write_2 (not 4)
	2009/04/22 (TS)
	- imported SLAC version into OAR repository; added FXP driver.
	2008/03/22 (TS)
	- silence more compiler warnings: