@@ -1,3 +1,7 @@
+2009-09-12  Chris Johns <chrisj@rtems.org>
+
+	* links.am: Fixed the links so they work with absolute paths.
+
 2009-08-15  Till Straumann <Till.Straumann@TU-Berlin.de>
 
 	* if_re/Makefile.am: added 'if_rlreg.h' to SOURCES so
